# xdb

./: .clangd  CMakeLists.txt  README.md  test_prog  vcpkg.json
.zed/: settings.json
include/libxdb/: bit.hpp  breakpoint_site.hpp  disassembler.hpp  dwarf.hpp  elf.hpp  error.hpp  libxdb.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  stoppoint_collection.hpp  syscalls.hpp  target.hpp  types.hpp  watchpoint.hpp
include/libxdb/detail/: dwarf.h  registers.inc
src/: CMakeLists.txt  breakpoint_site.cpp  disassembler.cpp  dwarf.cpp  elf.cpp  libxdb.cpp  pipe.cpp  process.cpp  registers.cpp  syscalls.cpp  target.cpp  types.cpp  watchpoint.cpp
src/include/: syscalls.inc
test/: CMakeLists.txt  tests.cpp
test/targets/: CMakeLists.txt  anti_debugger.cpp  hello.cpp  memory.cpp  reg_read.s  reg_write.s  run_endlessly.cpp
tools/: CMakeLists.txt  dwarf_dump.cpp  xdb.cpp
tools/command/: breakpoint.cpp  catchpoint.cpp  disassemble.cpp  handlers.hpp  help.cpp  memory.cpp  register.cpp  watchpoint.cpp
