function(add_test_target target_name source_file)
    add_executable(${target_name} ${source_file})
    target_compile_options(${target_name} PRIVATE -g -O0)
    target_link_options(${target_name} PRIVATE -pie)
    add_dependencies(tests ${target_name})
endfunction()

add_test_target(hello hello.cpp)
add_test_target(run_endlessly run_endlessly.cpp)
add_test_target(end_immediately end_immediately.cpp)
add_test_target(reg_write reg_write.s)
add_test_target(reg_read reg_read.s)
add_test_target(memory memory.cpp)
add_test_target(anti_debugger anti_debugger.cpp)
